--- a/res/layout/weather_layout.xml
+++ b/res/layout/weather_layout.xml
@@ -10,6 +10,14 @@
 	    android:background="#484E61"
 	    >
 	    
+	    <Button
+android:id="@+id/switch_city"
+android:layout_width="30dp"
+android:layout_height="30dp"
+android:layout_centerVertical="true"
+android:layout_marginLeft="10dp"
+android:background="@drawable/ic_launcher" />
+	    
 	    <TextView
 		android:id="@+id/city_name"
 		android:layout_width="wrap_content"
@@ -17,6 +25,15 @@
 		android:layout_centerInParent="true"
 		android:textColor="#fff"
 		android:textSize="24sp" />
+	    
+	    <Button
+android:id="@+id/refresh_weather"
+android:layout_width="30dp"
+android:layout_height="30dp"
+android:layout_alignParentRight="true"
+android:layout_centerVertical="true"
+android:layout_marginRight="10dp"
+android:background="@drawable/ic_launcher" />
 	</RelativeLayout>
 	
 	<RelativeLayout
@@ -93,30 +110,7 @@
 				
 			</LinearLayout>
 			
-			<LinearLayout
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_gravity="center_horizontal"
-				android:orientation="horizontal" >
-				
-				<Button
-					android:id="@+id/switch_city"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_gravity="center_vertical"
-					android:textSize="30sp"
-					android:text="选择城市" />
-				
-				
-				<Button
-					android:id="@+id/refresh_weather"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_gravity="center_vertical"
-					android:textSize="30sp"
-					android:text="重选城市" />
-				
-			</LinearLayout>
+			
 		</LinearLayout>
 	</RelativeLayout>
 </LinearLayout>
